my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/va-arg-13.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/va-arg-13.c:13:34: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   13 |   if (va_arg (vap, int) != 1234) abort();
      |                                  ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/va-arg-13.c:13:34: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/va-arg-13.c:37:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   37 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/va-arg-13.c:37:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
2 errors generated.
